# contract-comparator

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Dockerfile  LICENSE  PROJECT_MODIFICATION_PLAN.md  README.md  SECURITY.md  SETUP_DOMAIN_EMAIL.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml  smoke.yml
config/: api_keys.json.template
docs/: api-reference.md  architecture.md  deployment-guide.md  index.html  installation.md  operations-guide.md  security-baseline.md  testing-guide.md  usage.md
docs/images/: README.md
examples/: README.md
examples/api/: curl_examples.sh  python_client.py
examples/contracts/: config.json
examples/profiles/: custom_profile.json
scripts/: check_docs_config.py
src/contract_comparator/: __init__.py  auth.py  config.py  database.py  error_handler.py  profiles.py  security.py  utils.py
src/contract_comparator/api/: __init__.py  api_server.py
src/contract_comparator/cli/: main.py
src/contract_comparator/compare/: __init__.py  comparator.py  excel_comparator.py  field_extractor.py  full_text_diff.py
src/contract_comparator/engine/: __init__.py  pdf_processor.py  word_parser.py
src/contract_comparator/engine/ocr/: __init__.py  binarize.py  dewarp.py  engine.py  fallback.py  industry.py  layout.py  logger.py  postcorrector.py  preprocessor.py  quality.py
src/contract_comparator/export/: __init__.py  report_exporter.py  report_generator.py
src/contract_comparator/llm/: __init__.py  llm_engine.py
src/contract_comparator/web/: app_streamlit.py
tests/: conftest.py  test_api_security.py  test_comparator.py  test_comparator_unit.py  test_config.py  test_database.py  test_database_unit.py  test_error_handler.py  test_error_handler_unit.py  test_excel_comparator.py  test_field_extractor.py  test_field_extractor_unit.py  test_full_text_diff.py  test_integration.py  test_llm_engine.py  test_ocr_engine.py  test_readme.py  test_report_exporter.py  test_security.py  test_security_unit.py  test_sensitive_files.py
