[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-comparator"
version = "4.0.0"
description = "合同与文档智能比对工具 - 支持 Excel 比对、图片 OCR、多模型 LLM 语义分析、SQLite 存储"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "NumBoxHub", email = "info@numboxhub.com" },
]
maintainers = [
    { name = "NumBoxHub", email = "info@numboxhub.com" },
]
keywords = ["contract", "comparison", "ocr", "pdf", "word", "diff", "excel", "image-ocr", "multi-llm", "sqlite", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Framework :: Streamlit",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/contract-comparator/contract-comparator"
Repository = "https://github.com/contract-comparator/contract-comparator"
Documentation = "https://github.com/contract-comparator/contract-comparator/tree/main/docs"
Changelog = "https://github.com/contract-comparator/contract-comparator/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/contract-comparator/contract-comparator/issues"
"Security Policy" = "https://github.com/contract-comparator/contract-comparator/blob/main/SECURITY.md"

dependencies = [
    "rapidocr-onnxruntime>=1.3.0",
    "onnxruntime>=1.16.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "diff-match-patch>=20230430",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "fpdf2>=2.7.0",
    "jinja2>=3.1.0",
    "cryptography>=41.0.0",
    "python-dateutil>=2.8.0",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "coverage>=7.3.0",
]

[project.scripts]
contract-compare = "contract_comparator.cli.main:main"
contract-compare-excel = "contract_comparator.compare.excel_comparator:main"
contract-ui = "contract_comparator.web.app_streamlit:main"
contract-api = "contract_comparator.api.api_server:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["contract_comparator*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
contract_comparator = ["**/*.json"]

# ---- pytest 配置 ----
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src/contract_comparator",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-fail-under=60",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---- pylint 配置 ----
[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "C0114",   # missing-module-docstring
    "C0115",   # missing-class-docstring
    "C0116",   # missing-function-docstring
    "R0903",   # too-few-public-methods
    "R0913",   # too-many-arguments
    "R0914",   # too-many-locals
    "W0719",   # broad-exception-raised
    "W0703",   # broad-except
]

# ---- coverage 配置 ----
[tool.coverage.run]
source = ["src/contract_comparator"]
omit = [
    "tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

# ---- mypy 配置（可选）----
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true